# uv-workspace-reference

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/hooks/: block_git_hook_bypass.py
.github/workflows/: ci.yml
scripts/: check_tag_matches_version.py
